Git_WGBH_QC/src/objects/Campaign_Member_Report__c.object
<CustomObject>
    <fields>
        <fullName>ADDRESS_EXTRA_LINE1__c</fullName>
        <formula>Contact__r.Account.Preferred_Address__r.Street_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADDRESS EXTRA LINE1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASK1__c</fullName>
        <label>ASK1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASK2__c</fullName>
        <label>ASK2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASK3__c</fullName>
        <label>ASK3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUCTION_BIDDER__c</fullName>
        <label>AUCTION BIDDER</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Contact__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_ADDGIFT_CODE__c</fullName>
        <label>BC_ADDGIFT_CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_ADDGIFT_VALUE__c</fullName>
        <label>BC_ADDGIFT_VALUE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_ENGAGE_CODE__c</fullName>
        <label>BC_ENGAGE_CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_ENGAGE_VALUE__c</fullName>
        <label>BC_ENGAGE_VALUE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_RENEW_CODE__c</fullName>
        <label>BC_RENEW_CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_RENEW_VALUE__c</fullName>
        <label>BC_RENEW_VALUE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_UPGRADE_CODE__c</fullName>
        <label>BC_UPGRADE_CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_UPGRADE_VALUE__c</fullName>
        <label>BC_UPGRADE_VALUE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALLING_DESCRIPTION__c</fullName>
        <formula>Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALLING DESCRIPTION</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALLING_EXPIRE__c</fullName>
        <label>CALLING EXPIRE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALLING_TYPE__c</fullName>
        <formula>text(Campaign__r.Solicitation_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALLING TYPE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_EXPIRE__c</fullName>
        <label>CC_EXPIRE</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHARGE_CARD_ALIAS__c</fullName>
        <externalId>true</externalId>
        <label>CHARGE_CARD_ALIAS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHARGE_CARD_NUMBER__c</fullName>
        <label>CHARGE_CARD_NUMBER</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CITY__c</fullName>
        <formula>Contact__r.Account.Preferred_Address__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CITY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONVIO_ID__c</fullName>
        <formula>Contact__r.Account.Account_ID_Convio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CONVIO ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUME_GIVING__c</fullName>
        <label>CUME GIVING</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CURRENT_GLA__c</fullName>
        <label>CURRENT GLA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Id__c</fullName>
        <label>Campaign Member Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Member Reports</relationshipLabel>
        <relationshipName>Campaign_Member_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Member Reports</relationshipLabel>
        <relationshipName>Campaign_Member_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMAIL__c</fullName>
        <formula>Contact__r.Account.Household_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMAIL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>ExpirationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FNAME1__c</fullName>
        <formula>IF(  ISPICKVAL(Contact__r.Contact_Type__c, &apos;Primary&apos;) ,Contact__r.FirstName ,null)</formula>
        <label>FNAME1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FNAME2__c</fullName>
        <formula>IF( ispickval(Contact__r.Contact_Type__c ,&apos;Household Member&apos;),  Contact__r.FirstName,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FNAME2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEO_CANADA__c</fullName>
        <formula>IF( Contact__r.Account.Preferred_Address__r.Country__c==&apos;CAN&apos;,&apos;CAN&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GEO CANADA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEO_CAPECOD__c</fullName>
        <label>GEO_CAPECOD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEO_INSIDE128__c</fullName>
        <label>GEO_INSIDE128</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEO_INSIDE495__c</fullName>
        <label>GEO_INSIDE495</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEO_INTERNATIONAL__c</fullName>
        <formula>IF(AND(Contact__r.Account.Preferred_Address__r.Country__c!=&apos;USA&apos;,Contact__r.Account.Preferred_Address__r.Country__c!=&apos;CAN&apos;), Contact__r.Account.Preferred_Address__r.Country__c ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GEO INTERNATIONAL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEO_NAMERICA__c</fullName>
        <formula>IF( AND(Contact__r.Account.Preferred_Address__r.Country__c==&apos;USA&apos;, IF(  AND(Contact__r.Account.Preferred_Address__r.State__c!=&apos;MA&apos;,Contact__r.Account.Preferred_Address__r.State__c!=&apos;NH&apos;,Contact__r.Account.Preferred_Address__r.State__c!=&apos;CT&apos;,Contact__r.Account.Preferred_Address__r.State__c!=&apos;ME&apos;,Contact__r.Account.Preferred_Address__r.State__c!=&apos;VT&apos;),true,false ) ),Contact__r.Account.Preferred_Address__r.Country__c,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GEO NAMERICA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEO_NEWENGLAND__c</fullName>
        <formula>IF(  OR(Contact__r.Account.Preferred_Address__r.State__c==&apos;NH&apos;,Contact__r.Account.Preferred_Address__r.State__c==&apos;RI&apos;,Contact__r.Account.Preferred_Address__r.State__c==&apos;CT&apos;,Contact__r.Account.Preferred_Address__r.State__c==&apos;ME&apos;,Contact__r.Account.Preferred_Address__r.State__c==&apos;VT&apos;) ,Contact__r.Account.Preferred_Address__r.State__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GEO NEWENGLAND</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIFT_ACTIVITY10__c</fullName>
        <label>GIFT_ACTIVITY10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIFT_ACTIVITY1__c</fullName>
        <label>GIFT_ACTIVITY1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIFT_ACTIVITY2__c</fullName>
        <label>GIFT_ACTIVITY2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIFT_DATE10__c</fullName>
        <label>GIFT_DATE10</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GIFT_DATE1__c</fullName>
        <label>GIFT_DATE1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GIFT_DATE2__c</fullName>
        <label>GIFT_DATE2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GIFT_KIND10__c</fullName>
        <label>GIFT_KIND10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIFT_KIND1__c</fullName>
        <label>GIFT_KIND1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIFT_KIND2__c</fullName>
        <label>GIFT_KIND2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIFT_TYPE10__c</fullName>
        <label>GIFT_TYPE10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIFT_TYPE1__c</fullName>
        <label>GIFT_TYPE1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIFT_TYPE2__c</fullName>
        <label>GIFT_TYPE2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giving_Summary__c</fullName>
        <label>Giving Summary</label>
        <referenceTo>Giving_Summary__c</referenceTo>
        <relationshipLabel>Campaign Member Reports</relationshipLabel>
        <relationshipName>Campaign_Member_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INS_FREQ10__c</fullName>
        <label>INS_FREQ10</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INS_FREQ1__c</fullName>
        <label>INS_FREQ1</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INS_FREQ2__c</fullName>
        <label>INS_FREQ2</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INTEREST1__c</fullName>
        <label>INTEREST1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INTEREST2__c</fullName>
        <label>INTEREST2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INTEREST3__c</fullName>
        <label>INTEREST3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_BLUES_HITS__c</fullName>
        <label>INT_BLUES_HITS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INT_BLUES__c</fullName>
        <label>INT_BLUES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_CAPE_HITS__c</fullName>
        <label>INT_CAPE_HITS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INT_CAPE__c</fullName>
        <label>INT_CAPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_CELTIC_HITS__c</fullName>
        <label>INT_CELTIC_HITS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INT_CELTIC__c</fullName>
        <label>INT_CELTIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_CLASSICAL_HITS__c</fullName>
        <label>INT_CLASSICAL_HITS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INT_CLASSICAL__c</fullName>
        <label>INT_CLASSICAL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_HISTORY_HITS__c</fullName>
        <label>INT_HISTORY_HITS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INT_HISTORY__c</fullName>
        <label>INT_HISTORY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_JAZZ_HITS__c</fullName>
        <label>INT_JAZZ_HITS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INT_JAZZ__c</fullName>
        <label>INT_JAZZ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_KIDS_HITS__c</fullName>
        <label>INT_KIDS_HITS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INT_KIDS__c</fullName>
        <label>INT_KIDS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_LIFELIVE_HITS__c</fullName>
        <label>INT_LIFELIVE_HITS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INT_LIFELIVE__c</fullName>
        <label>INT_LIFELIVE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_MUSICDRAMA_HITS__c</fullName>
        <label>INT_MUSICDRAMA_HITS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INT_MUSICDRAMA__c</fullName>
        <label>INT_MUSICDRAMA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_NEWS_HITS__c</fullName>
        <label>INT_NEWS_HITS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INT_NEWS__c</fullName>
        <label>INT_NEWS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INT_SCIENCE_HITS__c</fullName>
        <label>INT_SCIENCE_HITS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INT_SCIENCE__c</fullName>
        <label>INT_SCIENCE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProccessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Record Proccessed by Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAST_CONTRIBUTION__c</fullName>
        <label>LAST CONTRIBUTION</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAST_NAME__c</fullName>
        <formula>IF(AND(  ISPICKVAL( Contact__r.Contact_Status__c ,&apos;Active&apos;) ,  ISPICKVAL( Contact__r.Contact_Type__c ,&apos;Primary&apos;)),Contact__r.LastName ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LAST NAME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LNAME1__c</fullName>
        <formula>IF( ISPICKVAL(Contact__r.Contact_Type__c,&apos;Primary&apos;),Contact__r.LastName , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LNAME1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LNAME2__c</fullName>
        <formula>IF( text(Contact__r.Contact_Type__c)==&apos;Household Member&apos;, Contact__r.LastName ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LNAME2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Campaign Member Reports</relationshipLabel>
        <relationshipName>Campaign_Member_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MERCHANT_ID__c</fullName>
        <formula>IF( ISPICKVAL(Campaign__r.Station__c,&apos;WGBH&apos;) ,&apos;858687144948&apos;,IF( ISPICKVAL(Campaign__r.Station__c,&apos;WGBY&apos;), &apos;019564162492&apos;, IF( ISPICKVAL(Campaign__r.Station__c,&apos;WCAI&apos;), &apos;001020971812&apos;,null) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MERCHANT ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MERCHANT_KEY__c</fullName>
        <formula>IF( ISPICKVAL(Campaign__r.Station__c,&apos;WGBH&apos;) ,&apos;Q7P7Y6G7N7J6&apos;,IF( ISPICKVAL(Campaign__r.Station__c,&apos;WGBY&apos;), &apos;A7R6C7G8A7E6&apos;, IF( ISPICKVAL(Campaign__r.Station__c,&apos;WCAI&apos;), &apos;A6K6G7C6P7P7&apos;,null) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MERCHANT KEY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_LINE__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAME_LINE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYMENT_METHOD10__c</fullName>
        <label>PAYMENT_METHOD10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYMENT_METHOD1__c</fullName>
        <label>PAYMENT_METHOD1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYMENT_METHOD2__c</fullName>
        <label>PAYMENT_METHOD2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLEDGE_AMT10__c</fullName>
        <label>PLEDGE_AMT10</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLEDGE_AMT1__c</fullName>
        <label>PLEDGE_AMT1</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLEDGE_AMT2__c</fullName>
        <label>PLEDGE_AMT2</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLEDGE_PAID10__c</fullName>
        <label>PLEDGE_PAID10</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLEDGE_PAID1__c</fullName>
        <label>PLEDGE_PAID1</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLEDGE_PAID2__c</fullName>
        <label>PLEDGE_PAID2</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PROGRAM_DESCRIPTION__c</fullName>
        <label>PROGRAM DESCRIPTION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOURCE__c</fullName>
        <formula>Campaign__r.Source_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOURCE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <formula>Contact__r.Account.Preferred_Address__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STATE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATION10__c</fullName>
        <label>STATION10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATION1__c</fullName>
        <label>STATION1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATION2__c</fullName>
        <label>STATION2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STREET_NAME__c</fullName>
        <formula>Contact__r.Account.Preferred_Address__r.Street_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STREET NAME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUFFIX1__c</fullName>
        <formula>IF( ispickval(Contact__r.Contact_Type__c,&apos;Primary&apos;) ,Contact__r.suffix__c , null)</formula>
        <label>SUFFIX1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUFFIX2__c</fullName>
        <formula>IF( text(Contact__r.Contact_Type__c)==&apos;Household Member&apos; , Contact__r.suffix__c ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SUFFIX2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUSTAINER__c</fullName>
        <label>SUSTAINER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TELEPHONE1__c</fullName>
        <formula>Contact__r.Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TELEPHONE1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TELEPHONE2__c</fullName>
        <formula>Contact__r.Account.WorkPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TELEPHONE2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TITLE1__c</fullName>
        <formula>IF( ispickval(Contact__r.Contact_Type__c,&apos;Primary&apos;),text(Contact__r.Salutation),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TITLE1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TITLE2__c</fullName>
        <formula>IF( ispickval(Contact__r.Contact_Type__c,&apos;Household Member&apos;),text(Contact__r.Salutation),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TITLE2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <label>Teacher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOLUNTEER__c</fullName>
        <label>VOLUNTEER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YEARS_ON_FILE__c</fullName>
        <formula>(YEAR(TODAY()) - YEAR(Contact__r.Account.Acquired_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YEARS ON FILE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZIP_CODE__c</fullName>
        <formula>Contact__r.Account.Mailing_PostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZIP CODE</label>
        <type>Text</type>
    </fields>
    <label>Campaign Member Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Id__c</columns>
        <columns>ADDRESS_EXTRA_LINE1__c</columns>
        <columns>ASK1__c</columns>
        <columns>ASK2__c</columns>
        <columns>ASK3__c</columns>
        <columns>AUCTION_BIDDER__c</columns>
        <columns>Campaign__c</columns>
        <columns>Campaign_Member_Id__c</columns>
        <columns>CC_EXPIRE__c</columns>
        <columns>CHARGE_CARD_ALIAS__c</columns>
        <columns>CHARGE_CARD_NUMBER__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OVF-{0000}</displayFormat>
        <label>Campaign Member Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Member Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>